--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 3001
+DB_CNN = mongodb+srv://chat_user:r59x4qOdJHVdld3E@cluster0.yxn9h.mongodb.net/chat
+JWT_KEY = osdiofjidso@??!!@@@iojdiofjods:sdfi3983849
